2007-01-21 Raul Mateos  <raulofpandora@gmail.com>

	* images/setup.gif: Updated icon.
	
	* operation/estado_agente.php, estado_generalagente.php: Updated image width
	for new icon.

2007-01-14 Raul Mateos  <raulofpandora@gmail.com>

	* include/languages/language_de.php: Updated file for german language.

2007-01-10 Raul Mateos  <raulofpandora@gmail.com>

	* help/[gl|de]/*.php: New files. At this moment, is a redirect to the
	english help.
	
	* operation/menu.php: Small style correction.
	
	* active_console/*.php: Change from <? to <?php, change comments to put them
	inside <?php. Small changes in js scripts.

2007-01-09 Raul Mateos  <raulofpandora@gmail.com>

	* godmode/agentes/configurar_agente.php; Style correction. Solve small
	bug	not showing any table if no alert defined.
	
	* include/config.php: Add some comments and change order of error reporting
	function.
	
	* include/languages/*.php: New file for german language. Some
	updates for the rest of files.
	
	* pandoradb_data.sql: Add entry for german language.

	* operation/menu.php: Style correction (not enough).
	
	* include/op.css: Solve small bug with hover in reporting icon.

2007-01-08  Manuel Arostegui <marostegui@artica.es>

	* pandora_console.spec: Changed group.

2007-01-05  Sancho Lerena  <slerena@artica.es>

	Importing data from Azabel brach. This commit is a little
	chaotic :-). Almost all code it's break apart, so no problems
	should not be generated. New graphical console will be called
	"Active console", as temporal name.
	
	* pandora_graphical_console.sql: New SQL for active console.

	* pandora_graphical_console_data.sql: New SQL data for A.C.

	* images/op9.gif: New icon for operation menu.

	* operation/active_console/index.php: Main index for A.C. this
	includes now a require function for config.php.

	* operation/active_console/imagenes/*: Lots of images for
	A.C. Need to be ordered or something.

	* operation/active_console/scripts/*: Most of the Javascript code
	for the A.C is here.
